# Block_employ

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/Block_Employ_backend/: Cargo.toml
src/Block_Employ_backend/src/: cors.rs  db.rs  errors.rs  lib.rs  prelude.rs
src/Block_Employ_backend/src/utils/: clone.rs
src/Block_Employ_frontend/: package.json
src/Block_Employ_frontend/src/: App.js
