[package]
name = "Block_Employ_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.12"                
ic-cdk-timers = "0.6" # Feel free to remove this dependency if you don't need timers
rocket = { version = "0.5.0", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
serde = { version = "1.0", features = ["derive"] }
surrealdb = "1.3.1"
thiserror = "1.0.58"
ic-stable-structures = "0.6.3"
